@@ -10,7 +10,7 @@
 /***********************************************************************
  * |PothosDoc Pacer
  *
- * The pacer block passivly forwards all data from
+ * The pacer block passively forwards all data from
  * input port 0 to the output port 0 without copying.
  * The data rate will be limited to the rate setting.
  * This rate limitation is an approximation at best.
