@@ -3,6 +3,9 @@ This this the changelog file for the Pothos Blocks toolkit.
 Release 0.2.1 (pending)
 ==========================
 
+- Created stream relabeler utility block
+- Created threshold labeler utility block
+- Created envelope detector filter block
 - Fixed sporadic dropper to set the label width
 - Added simple LLC block for logical link control
 - Created sporadic dropper for reliability testing
